--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,8 @@
     <script src="gameStateManager.js"></script>
     <script src="market.js"></script>
     <script src="station.js"></script>
+    <script src="planet.js"></script>   <!-- ADDED -->
+    <script src="asteroid.js"></script> <!-- ADDED -->
     <script src="starSystem.js"></script>
     <script src="galaxy.js"></script>
     <script src="projectile.js"></script>
