--- a/index.htm
+++ b/index.htm
@@ -4,21 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elite MVP (p5.js)</title>
+    <!-- Load p5.js library first -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
-    <!-- Load Classes BEFORE sketch.js -->
+
+    <!-- Load Ship Definitions and Drawing Functions -->
+    <script src="ships.js"></script> <!-- MOVED & ADDED HERE -->
+
+    <!-- Load Other Classes (Order matters if dependencies exist) -->
     <script src="gameStateManager.js"></script>
     <script src="market.js"></script>
     <script src="station.js"></script>
-    <script src="planet.js"></script>   <!-- ADDED -->
-    <script src="asteroid.js"></script> <!-- ADDED -->
-    <script src="starSystem.js"></script>
-    <script src="galaxy.js"></script>
+    <script src="planet.js"></script>
+    <script src="asteroid.js"></script>
+    <script src="starSystem.js"></script> <!-- Uses Station, Planet, Asteroid -->
+    <script src="galaxy.js"></script>     <!-- Uses StarSystem -->
     <script src="projectile.js"></script>
-    <script src="enemy.js"></script>
+    <!-- Load Player and Enemy AFTER ships.js because they use SHIP_DEFINITIONS -->
     <script src="player.js"></script>
-    <script src="uiManager.js"></script>
+    <script src="enemy.js"></script>
+    <script src="uiManager.js"></script> <!-- Uses Player, Galaxy, Market -->
+
     <!-- Load Main Sketch Last -->
     <script src="sketch.js"></script>
+
     <style>
         body { margin: 0; overflow: hidden; background-color: black; }
         canvas { display: block; } /* Prevent scroll bars */
