--- a/index.htm
+++ b/index.htm
@@ -33,6 +33,8 @@
     <!-- Load Main Sketch Entry Point -->
     <script src="sketch.js"></script>
 
+    <link rel="stylesheet" href="style.css">
+
     <style> /* CSS as before */ </style>
 </head>
 <body>
