weapon upgrades implemented

--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,7 @@
 
     <!-- Load Data Definitions FIRST -->
     <script src="ships.js"></script>
+    <script src="weapons.js"></script>
     <script src="mission.js"></script> <!-- ADDED -->
 
     <!-- Load Generators/Managers NEXT -->
