--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,7 @@
     <!-- Load Data Definitions FIRST -->
     <script src="ships.js"></script>
     <script src="weapons.js"></script>
+    <script src="weaponSystem.js"></script>
     <script src="mission.js"></script> <!-- ADDED -->
 
     <!-- Load Generators/Managers NEXT -->
