--- a/index.htm
+++ b/index.htm
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elite MVP (p5.js)</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
+    <title>Elite (p5.js)</title>
+    <script src="p5.min.js"></script>
+    <script src="p5.sound.min.js"></script>
 
     <!-- Load Data Definitions FIRST -->
     <script src="ships.js"></script>
