--- a/index.htm
+++ b/index.htm
@@ -34,6 +34,7 @@
     <script src="uiManager.js"></script>
 
     <!-- Load Main Sketch Entry Point -->
+    <script src="explosion.js"></script>
     <script src="sketch.js"></script>
 
     <link rel="stylesheet" href="style.css">
