--- a/index.htm
+++ b/index.htm
@@ -27,6 +27,7 @@
 
     <!-- Load Entity Classes -->
     <script src="projectile.js"></script>
+    <script src="thrustParticles.js"></script>
     <script src="player.js"></script>     <!-- Uses Mission -->
     <script src="enemy.js"></script>      <!-- Uses Mission constants? (Potentially later) -->
 
