Cargo Items dropping

--- a/index.htm
+++ b/index.htm
@@ -30,6 +30,7 @@
     <script src="thrustParticles.js"></script>
     <script src="player.js"></script>     <!-- Uses Mission -->
     <script src="enemy.js"></script>      <!-- Uses Mission constants? (Potentially later) -->
+    <script src="cargo.js"></script>
 
     <!-- Load UI LAST (Depends on most others) -->
     <script src="uiManager.js"></script>
