--- a/index.htm
+++ b/index.htm
@@ -37,6 +37,7 @@
 
     <!-- Load Main Sketch Entry Point -->
     <script src="explosion.js"></script>
+    <script src="titleScreen.js"></script>
     <script src="sketch.js"></script>
 
     <link rel="stylesheet" href="style.css">
