--- a/index.htm
+++ b/index.htm
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elite (p5.js)</title>
-    <script src="p5.min.js"></script>
-    <script src="p5.sound.min.js"></script>
+    <script src="libraries/p5.min.js"></script>
+    <script src="libraries/p5.sound.min.js"></script>
+    <script src="libraries/riffwave.js"></script>
+    <script src="libraries/sfxr.js"></script>
+
+    <script src="soundManager.js"></script> 
 
     <!-- Load Data Definitions FIRST -->
     <script src="ships.js"></script>
