--- a/editor/index.html
+++ b/editor/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>P5.js Ship Editor</title>
     <!-- Load p5.js Core -->
-    <script src="../p5.min.js"></script>
+    <script src="../libraries/p5.min.js"></script>
     <!-- Load your custom ship definitions -->
     <script src="../ships.js"></script> <!-- Make sure this points to your modified ships.js -->
     <!-- Load your editor logic -->
