--- a/editor/index.html
+++ b/editor/index.html
@@ -94,6 +94,7 @@
         <button id="addVertexButton">Toggle Add Vertex Mode</button>
         <span>(Click edge)</span>
         <button id="straightenButton">Straighten Symmetry</button>
+        <button id="centerDesignButton">Center Design</button> <!-- Add this button -->
         <button id="undoButton" title="Undo Last Change">Undo</button>
         <button id="zoomOutButton" title="Zoom Out">-</button>
         <button id="zoomInButton" title="Zoom In">+</button>
