--- a/index.htm
+++ b/index.htm
@@ -34,6 +34,7 @@
     <script src="thrustParticles.js"></script>
     <script src="player.js"></script>     <!-- Uses Mission -->
     <script src="enemy.js"></script>      <!-- Uses Mission constants? (Potentially later) -->
+    <script src="inventoryScreen.js"></script>
     <script src="cargo.js"></script>
 
     <!-- Load UI LAST (Depends on most others) -->
