--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,4 @@
+/elite/index.htm -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,7 +27,13 @@
     <script src="station.js"></script> <!-- Uses Market -->
     <script src="planet.js"></script>
     <script src="asteroid.js"></script>
-    <script src="starSystem.js"></script> <!-- Uses Station, Planet, Asteroid, MissionGenerator -->
+    
+    <!-- NEW: Astronomical Features -->
+    <script src="nebula.js"></script>        <!-- New astronomical feature -->
+    <script src="cosmicStorm.js"></script>   <!-- New astronomical feature -->
+    <script src="asteroidField.js"></script> <!-- New astronomical feature -->
+    
+    <script src="starSystem.js"></script> <!-- Uses Station, Planet, Asteroid, and now the new features -->
     <script src="galaxy.js"></script>     <!-- Uses StarSystem -->
 
     <!-- Load Entity Classes -->
@@ -46,8 +53,6 @@
     <script src="sketch.js"></script>
 
     <link rel="stylesheet" href="style.css">
-
-    <style> /* CSS as before */ </style>
 </head>
 <body>
 </body>
