--- a/index.htm
+++ b/index.htm
@@ -35,6 +35,9 @@
     <script src="starSystem.js"></script> <!-- Uses Station, Planet, Asteroid, and now the new features -->
     <script src="galaxy.js"></script>     <!-- Uses StarSystem -->
 
+    <!-- Basic utility classes first -->
+    <script src="objectPool.js"></script>
+
     <!-- Load Entity Classes -->
     <script src="projectile.js"></script>
     <script src="thrustParticles.js"></script>
