--- a/index.htm
+++ b/index.htm
@@ -16,6 +16,7 @@
   <script src="objectPool.js"></script>
   
   <script src="projectile.js"></script>
+  <script src="eventManager.js"></script>
 
     <!-- Load Data Definitions FIRST -->
     <script src="ships.js"></script>
