--- a/index.htm
+++ b/index.htm
@@ -40,6 +40,9 @@
     
     <script src="starSystem.js"></script> <!-- Uses Station, Planet, Asteroid, and now the new features -->
     <script src="galaxy.js"></script>     <!-- Uses StarSystem -->
+    
+    <!-- Debug Tools -->
+    <script src="debugNebulae.js"></script> <!-- Debug script for nebulae persistence -->
 
 
     <!-- Load Entity Classes -->
