--- a/index.htm
+++ b/index.htm
@@ -43,6 +43,7 @@
     
     <!-- Debug Tools -->
     <script src="debugNebulae.js"></script> <!-- Debug script for nebulae persistence -->
+    <script src="nebulaDebugHelpers.js"></script> <!-- Debug helpers for nebulae effects -->
 
 
     <!-- Load Entity Classes -->
