save game selection screen

--- a/index.htm
+++ b/index.htm
@@ -60,6 +60,7 @@
     <!-- Load Main Sketch Entry Point -->
     <script src="explosion.js"></script>
     <script src="titleScreen.js"></script>
+    <script src="saveSelectionScreen.js"></script>
     <script src="sketch.js"></script>
 
     <link rel="stylesheet" href="style.css">
